<resources>
    <!-- Geral -->
    <string name="app_name">PDM - Notas</string>
    <string name="strVoltar">Voltar</string>
    <string name="strAvancar">Avançar</string>
    <string name="strDisciplina">Disciplina</string>
    <string name="strCalcular">Calcular</string>
    <string name="strNotaFinal">Nota Final</string>

    <!-- Atividade: Créditos -->
    <string name="txtHeader_cred">Créditos</string>
    <string name="txtMembros_cred"> Integrantes do Grupo: </string>
    <string name="btnRepo_cred">Repositório do Github</string>
    <string name="btnApagar">Apagar todos as preferências</string>
    <string name="toastApagarPrefs">Todas as preferências salvas deste aplicativo foram apagadas!</string>

    <!-- Atividade: Principal (MainActivity) -->
    <string name="txtRA">RA</string>
    <string name="txtNome">Nome Completo</string>
    <string name="txtCurso">Curso</string>
    <string name="txtTurma">Turma</string>
    <string name="btnDesistir">Desistir</string>
    <string-array name="cursos_array">
        <item>-- SELECIONE --</item>
        <item>Ciência da Computação</item>
        <item>Análise e Desenvolvimento de Sistemas</item>
        <item>Medicina</item>
        <item>Odontologia</item>
        <item>Gestão de Tecnologia da Informação</item>
        <item>Administração</item>
        <item>Engenharia de Computação</item>
    </string-array>

    <!-- Atividade: Disciplinas -->
    <string name="btnInserir">Inserir</string>
    <string name="edtDisciplina">Digite a disciplina</string>


    <!-- Atividade: Notas -->
    <string name="txtDisciplina_notas">Disciplina</string>
    <string name="txtNotaA1_notas">Nota A1</string>
    <string name="txtNotaA2_notas">Nota A2</string>
    <string name="txtNotaAF_notas">Nota AF</string>
    <string name="btnCalcular">Calcular Nota Final</string>
    <string name="btnVoltarDisciplinas">Alterar disciplinas</string>
    <string name="txtCreditos">Creditos e opções</string>

    <!-- Atividade: Resultado -->
    <string name="txtDisciplina_res">Disciplina:</string>
    <string name="txtNotaFinal_res">Nota Final:</string>
    <string name="btnVoltar">Voltar</string>
    <string name="txtAprovado">Aprovado</string>
    <string name="txtReprovado">Reprovado</string>
    <string name="txtAf">Avaliacao Final</string>
    <string name="btnAF">Calcular AF</string>

    <!-- Erros -->
    <string name="toastErroRA">RA vazio!</string>
    <string name="toastErroNome">Nome vazio!</string>
    <string name="toastErroTurma">Turma vazio!</string>
    <string name="toastErroCurso">Selecione um curso!</string>
    <string name="toastErroNota">Nota inválida!</string>
    <string name="toastErroNotas">Notas inválidas!</string>
    <string name="toastErroCampos">Campos vazios!</string>
    <string name="toastErroCampo">Campo vazio!</string>
    <string name="toastErroDisciplinaCadastrada">ERRO: Nenhuma disciplina cadastrada</string>

</resources>