<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creditos">

    <!-- Header -->
    <TextView
        android:id="@+id/txtHeader_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="55sp"
        android:text="@string/txtHeader_cred"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextIcons" />

    <TextView
        android:id="@+id/txtMembros_cred"
        android:layout_below="@id/txtHeader_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:text="@string/txtMembros_cred" />
    <!-- Nome dos Membros -->
    <EditText
        android:id="@+id/edtNomes_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMembros_cred"
        android:ems="10"
        android:inputType="textMultiLine"
        android:enabled="false"
        android:textAlignment="center"
        android:hint="Greyce Besinger\nHeloíza Bartulic\nNicholas Henrique\nRoberto Nunes\nVictor Brossa"
        android:text="Greyce Besinger\nHeloíza Bartulic\nNicholas Henrique\nRoberto Nunes\nVictor Brossa"
        tools:ignore="Autofill, HardcodedText" />

    <!-- Botão GitHub -->
    <Button
        android:id="@+id/bntRepo_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNomes_cred"
        android:text="@string/btnRepo_cred"
        android:onClick="btnGithub" />

    <!-- Botão Apagar -->
    <Button
        android:id="@+id/btnApagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bntRepo_cred"
        android:layout_marginTop="50dp"
        android:text="@string/btnApagar"
        android:onClick="apagarPrefs"
        android:enabled="true"/>

    <!-- Botão voltar -->
    <Button
        android:id="@+id/bntVoltar_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnVoltar"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/strVoltar" />

</RelativeLayout>