<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasAF">

    <TextView
        android:id="@+id/txtDisciplina_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/txtDisciplina_notas" />

    <TextView
        android:id="@+id/txtDisciplinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDisciplina_notas"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="" />

    <TextView
        android:id="@+id/txtNotaA1_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDisciplinas"
        android:textStyle="bold"
        android:text="@string/txtNotaA1_notas" />

    <EditText
        android:id="@+id/edtNotaA1_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNotaA1_notas"
        android:inputType="numberDecimal"
        android:enabled="false" />

    <TextView
        android:id="@+id/txtNotaA2_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNotaA1_notas"
        android:textStyle="bold"
        android:text="@string/txtNotaA2_notas" />

    <EditText
        android:id="@+id/edtNotaA2_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNotaA2_notas"
        android:inputType="numberDecimal"
        android:enabled="false" />

    <TextView
        android:id="@+id/txtNotaAF_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNotaA2_notas"
        android:textStyle="bold"
        android:text="@string/txtNotaAF_notas" />

    <EditText
        android:id="@+id/edtNotaAF_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNotaAF_notas"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNotaAF_notas"
        android:textAlignment="center"
        android:text="@string/btnCalcular" />
</RelativeLayout>