<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notas">

    <TextView
        android:id="@+id/txtDisciplinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/txtDisciplina_notas" />

    <Spinner
        android:id="@+id/spnDisciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDisciplinas" />

    <TextView
        android:id="@+id/txtNotaA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@id/spnDisciplina"
        android:text="@string/txtNotaA1_notas" />

    <EditText
        android:id="@+id/edtNotaA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNotaA1"
        android:textAlignment="textEnd"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtNotaA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNotaA1"
        android:textStyle="bold"
        android:text="@string/txtNotaA2_notas" />

    <EditText
        android:id="@+id/edtNotaA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNotaA2"
        android:textAlignment="textEnd"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNotaA2"
        android:text="@string/btnCalcular" />

</RelativeLayout>